# reallystate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  PLAN.md  PLANbacklogdash.md  README.md  alembic.ini  deep-research-report.md  docker-compose.yml  next-env.d.ts  openclaw-codex-execution-brief.md  package-lock.json  package.json  platform-mvp-plan.md  pyproject.toml  source-links-tier1-4.html  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
.cursor/: BUGBOT.md  environment.json  mcp.json
.pdf-exports-verified/: report.json
agents/: architecture.md
app/: globals.css  layout.tsx
artifacts/: legal-risk-matrix.md  source-matrix.md
data/: source_registry.json
docs/: agent-skills-index.md  cursor-agent-automation.md  development-setup.md  docker-and-database.md  linear-integration.md  project-architecture-execution-guide.md  project-status-roadmap.md  skills-used.md  stage1-controlled-production-architecture.md
lib/: config.ts  listing-source-links.ts
migrations/: README.md  env.py
scripts/: _dashboard_template.html  action1_scrape_matrix_snapshot.py  backfill_local_media_refs.py  backfill_scraped_media.py  export_source_stats_xlsx.py  generate_architecture_guide.py  generate_daily_health_report.py  generate_frontend_scraped_listings.py  generate_investor_presentation.py  generate_linear_import.py  generate_product_summary_report.py  generate_progress_dashboard.py  generate_s1_21_quality_audit.py  generate_scrape_status_dashboard.py  generate_scraping_inventory.py  generate_source_item_photo_coverage.py  live_scraper.py  (+14 more)
(+3544 files in other folders)
