[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bgrealestate"
version = "0.1.0"
description = "Bulgaria real estate ingestion and reverse-publishing foundation."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15",
  "asyncpg>=0.30",
  "beautifulsoup4>=4.13",
  "boto3>=1.37",
  "dateparser>=1.2",
  "fastapi>=0.115",
  "httpx>=0.28",
  "imagehash>=4.3",
  "lxml>=5.3",
  "openpyxl>=3.1",
  "phonenumbers>=8.13",
  "pillow>=11.0",
  "price-parser>=0.5",
  "python-docx>=1.1",
  "psycopg[binary]>=3.2",
  "pydantic>=2.11",
  "pyproj>=3.7",
  "reportlab>=4.2",
  "redis>=5.2",
  "shapely>=2.0",
  "sqlalchemy>=2.0",
  "structlog>=25.0",
  "temporalio>=1.10",
  "tenacity>=9.0",
  "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15",
  "pytest>=8.3",
  "ruff>=0.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
